# dichiarazioni

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/models/: schemas.py
app/routers/: clients.py  declarations.py
app/services/: fattureincloud.py  pdf_generator.py
app/static/: app.js  style.css
app/templates/: index.html
docx_templates/: dichiarazione.docx
scripts/: build_template.py  check_pdf_converter.py  inspect_pdf_fields.py
tests/: conftest.py  test_clients.py  test_declarations.py  test_pdf_generator.py
