[tool.poetry]
name = "dichiarazioni"
version = "0.1.0"
description = "Automazione Dichiarazioni di Conformità con integrazione Fatture in Cloud"
authors = ["Davide Capurro"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
fattureincloud-python-sdk = ">=2.0.7"
pypdf = ">=4.0.0"
python-dotenv = ">=1.0.0"
pydantic-settings = ">=2.0.0"
jinja2 = ">=3.1.0"
python-multipart = ">=0.0.9"
reportlab = ">=4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
